--- a/src/components/e-insta/main/home.scss
+++ b/src/components/e-insta/main/home.scss
@@ -2,43 +2,49 @@
 .buttonsh {
     text-transform: none;
     height: 40px;
-    width: 160px;
+    width: 100.3% !important;
     margin-top: 10px;
     margin-left: -0.5%;
     font-family: Polaris;
     font-weight: 700;
-    background: rgba(255, 255, 255, 0.08);
-
+    color: white !important;
+    background: #54B55D !important;
 }
 
 .buttonsh:hover {
-    background-color: #6866AC;
-    color: white;
+    background-color: #54B55D !important;
+    color: black !important;
 }
 
 .boxh {
-    margin-top: 8px;
-    color: white;
-    font-weight: 300;
-    font-size: 10px;
-    position: relative;
-    margin-left: -0.5%;
+    color: black;
+    font-size: 23px !important;
+    font-weight: 400 !important;
+    margin-left: 0px !important;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+}
+
+.box2h {
+    color: rgb(209, 55, 55);
+    font-size: 13px !important;
+    font-weight: 500 !important;
 }
 
 .box1h {
     margin-top: 8px;
-    color: white;
+    color: black;
     font-weight: 300;
     font-size: 10px;
-    margin-left: -29%;
+    margin-left: -25.5%;
 }
 
 .typ {
     color: white;
     font-size: 15px;
     font-weight: 700;
-    margin-left: -88.3%;
-    margin-top: -6%;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+    margin-left: -82% !important;
+    margin-top: -6% !important;
 }
 
 .box2 {
@@ -53,11 +59,11 @@
 }
 
 .tabs {
-    max-width: 2%;
+    max-width: 10%;
 }
 
 .box3 {
-    color: white;
+    color: rgb(0, 0, 0);
     border-bottom: 8px;
     border-color: Divider;
     margin-left: 1.1%;
@@ -70,23 +76,22 @@
 }
 
 .but {
-    font-size: 11px;
-    margin-top: -15px;
-    margin-right: -10px;
+    text-transform: none !important;
+    margin-top: -15px !important;
+    font-size: 11px !important;
+    margin-right: -10px !important;
 }
 
 .di {
-    font-size: 11px;
-    font-family: arial;
+    font-size: 13px;
     font-weight: 500;
-    margin-top: -17.1px;
+    margin-top: -18px;
     margin-right: 10px;
+    font-family: monospace !important;
 }
 
 .ava {
     margin-top: -17px;
-    height: 28;
-    width: 28;
     margin-right: 10px;
 }
 
@@ -121,5 +126,4 @@
     border: 1px solid #4A5568 !important;
     border-color: #4A5568 !important;
     border-radius: 6px !important;
-
 }
