--- a/src/components/nrp/main/home.scss
+++ b/src/components/nrp/main/home.scss
@@ -126,4 +126,5 @@
     border: 1px solid #4A5568 !important;
     border-color: #4A5568 !important;
     border-radius: 6px !important;
+    height: 30px;
 }
